fix: [CI-1595] added nowrap to pr link (#3233)
* fix: added nowrap to pr link

* test: updated snap

* refactor: inline styles -> using classes

--- a/src/modules/70-pipeline/pages/pipeline-deployment-list/ExecutionsList/ExecutionCard/ExecutionDetails/BuildInfo/BuildInfo.module.scss
+++ b/src/modules/70-pipeline/pages/pipeline-deployment-list/ExecutionsList/ExecutionCard/ExecutionDetails/BuildInfo/BuildInfo.module.scss
@@ -53,3 +53,7 @@
   fill: var(--primary-7) !important;
   height: 12px !important;
 }
+
+.prNumber {
+  white-space: nowrap;
+}
